# zzz-wiki

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.playwright-cli/: page-2026-06-16T03-09-18-204Z.yml
apps/desktop/: electron-builder.json  package.json  tsconfig.json
apps/desktop/scripts/: ensure-better-sqlite3.cjs  ensure-electron.cjs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
docs/: MHY_ZZZ_WIKI_AGENT_SOURCE.md  MHY_ZZZ_WIKI_DRIVE_DISC_SOURCE.md  MHY_ZZZ_WIKI_WEAPON_SOURCE.md  MVP_STATUS.md  TECHNICAL_PLAN.md  WINDOWS_PACKAGING_VALIDATION.md
openspec/changes/add-auto-sync-scheduler/: design.md  proposal.md  tasks.md
services/crawler/: README.md  pyproject.toml  requirements.txt
services/crawler/src/: __init__.py  cli.py
services/crawler/src/adapters/: __init__.py  base.py  mhy_zzz_agent_adapter.py  mhy_zzz_drive_disc_adapter.py  mhy_zzz_weapon_adapter.py  mock_agent_adapter.py
services/crawler/src/cleaners/: __init__.py  agent_cleaner.py  drive_disc_cleaner.py  weapon_cleaner.py
services/crawler/src/exporters/: __init__.py  base.py  json_exporter.py  sqlite_exporter.py
services/crawler/src/models/: __init__.py  records.py
services/crawler/src/tasks/: __init__.py  bootstrap_agents.py  fetch_mhy_agents.py  fetch_mhy_drive_discs.py  fetch_mhy_weapons.py
services/crawler/src/utils/: __init__.py  errors.py  logging.py  paths.py
shared/constants/: ipc.ts
shared/lib/: catalogRepository.ts
shared/mock-data/: catalog.ts
shared/schemas/: catalog.ts  desktop.ts
(+140 files in other folders)
